--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <title>Donation Page</title>
-    <nav class="  mx-auto ">
+    <nav class=" bg-white backdrop-blur-lg  mx-auto navbar-sticky  sticky top-0 z-50">
         <div class=" navbar bg-[#F9F7F3]">
             <div class="navbar-start">
               <div class="dropdown">
@@ -41,7 +41,7 @@
                   <li><a>Item 3</a></li>
                 </ul> -->
               </div>
-              <a class="btn flex justify-center items-center pl-6 pr-6 bg-[#B4F461]  font-bold  btn-ghost border-r-8 text-10">Blog</a>
+              <a href="/blog.html" class="btn flex justify-center items-center pl-6 pr-6 bg-[#B4F461]  font-bold  btn-ghost border-r-8 text-10">Blog</a>
             </div>
             <div class="navbar-center  lg:flex">
                 <div class="flex justify-center items-center">
@@ -66,14 +66,14 @@
             <div class="navbar-end lg:mr-5">
               <div class=" flex rounded-lg bg-white">
                 <img src="/assets/coin.png" alt="">
-              <span class="ml-1">5500</span>
+              <span class="lg:ml-1">5500</span>
               <p class="ml-1">BDT</p>
               </div>
               
             </div>
           </div>
           <div class="flex justify-center mt-10 mb-5">
-          <button class="btn hover:bg-[#B4F461]">Donate</button>
+          <a href="/index.html" class="btn hover:bg-[#B4F461]">Donate</a>
           <button class="btn ml-5 hover:bg-[#B4F461]">History</button>
           </div>
     </nav>
@@ -86,9 +86,9 @@
           src="assets/noakhali.png"
           class=" rounded-lg shadow-xl" />
           <div  class="">
-            <div class="w-1/5 flex rounded-lg bg-[#F3F3F3]">
+            <div class="lg:w-1/5 w-1/4  flex rounded-lg bg-[#F3F3F3]">
               <img class="ml-2" src="/assets/coin.png" alt="">
-            <span class="ml-1">10000</span>
+            <span class="ml-1">100</span>
             <p class="ml-1">BDT</p>
             </div>
           <h3 class="text-2xl font-bold">Donate for Flood at Noakhali, Bangladesh</h3>
