icon not found problem solution trail

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   <li><a>Item 3</a></li>
                 </ul> -->
               </div>
-              <a href="/blog.html" class="btn flex justify-center items-center pl-6 pr-6 bg-[#B4F461]  font-bold  btn-ghost border-r-8 text-10">Blog</a>
+              <a href="blog.html" class="btn flex justify-center items-center pl-6 pr-6 bg-[#B4F461]  font-bold  btn-ghost border-r-8 text-10">Blog</a>
             </div>
             <div class="navbar-center  lg:flex">
                 <div class="flex justify-center items-center">
@@ -65,7 +65,7 @@
             </div>
             <div class="navbar-end lg:mr-5">
               <div class=" flex rounded-lg bg-white">
-                <img src="/assets/coin.png" alt="">
+                <img src="./assets/coin.png" alt="">
               <span class="lg:ml-1">5500</span>
               <p class="ml-1">BDT</p>
               </div>
@@ -73,7 +73,7 @@
             </div>
           </div>
           <div class="flex justify-center mt-10 mb-5">
-          <a href="/index.html" class="btn hover:bg-[#B4F461]">Donate</a>
+          <a href="index.html" class="btn hover:bg-[#B4F461]">Donate</a>
           <button class="btn ml-5 hover:bg-[#B4F461]">History</button>
           </div>
     </nav>
@@ -83,11 +83,11 @@
     <div class="w-11/12 border rounded-xl mx-auto hero  ">
       <div class="hero-content flex-col lg:flex-row">
         <img
-          src="assets/noakhali.png"
+          src="./assets/noakhali.png"
           class=" rounded-lg shadow-xl" />
           <div  class="">
             <div class="lg:w-1/5 w-1/4  flex rounded-lg bg-[#F3F3F3]">
-              <img class="ml-2" src="/assets/coin.png" alt="">
+              <img class="ml-2" src="./assets/coin.png" alt="">
             <span class="ml-1">100</span>
             <p class="ml-1">BDT</p>
             </div>
@@ -110,11 +110,11 @@
     <div class="w-11/12 mt-5 mb-5 border rounded-xl mx-auto hero  ">
       <div class="hero-content flex-col lg:flex-row">
         <img
-          src="assets/feni.png"
+          src="./assets/feni.png"
           class=" rounded-lg shadow-xl" />
           <div  class="">
             <div class="w-1/5 flex rounded-lg bg-[#F3F3F3]">
-              <img src="/assets/coin.png" alt="">
+              <img src="./assets/coin.png" alt="">
             <span class="ml-1">0</span>
             <p class="ml-1">BDT</p>
             </div>
@@ -141,7 +141,7 @@
           class=" rounded-lg shadow-xl" />
           <div  class="">
             <div class="w-1/5 flex rounded-lg bg-[#F3F3F3]">
-              <img src="/assets/coin.png" alt="">
+              <img src="./assets/coin.png" alt="">
             <span class="ml-1">0</span>
             <p class="ml-1">BDT</p>
             </div>
