--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                   <li><a>Item 3</a></li>
                 </ul> -->
               </div>
-              <a href="blog.html" class="btn flex justify-center items-center pl-6 pr-6 bg-[#B4F461]  font-bold  btn-ghost border-r-8 text-10">Blog</a>
+              <a href="/blog.html" class="btn flex justify-center items-center pl-6 pr-6 bg-[#B4F461]  font-bold  btn-ghost border-r-8 text-10">Blog</a>
             </div>
             <div class="navbar-center  lg:flex">
                 <div class="flex justify-center items-center">
-                    <img class="ml-2" src="/assets/logo.png" alt="">
+                    <img class="ml-2" src="./assets/logo.png" alt="">
                     <p class="font-bold text-2xl 
                    ml-2 lg:ml-5">Donate Bangladesh</p>
                 </div>
