blog site check

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   <li><a>Item 3</a></li>
                 </ul> -->
               </div>
-              <a href="/blog.html" class="btn flex justify-center items-center pl-6 pr-6 bg-[#B4F461]  font-bold  btn-ghost border-r-8 text-10">Blog</a>
+              <a href="blog.html" class="btn flex justify-center items-center pl-6 pr-6 bg-[#B4F461]  font-bold  btn-ghost border-r-8 text-10">Blog</a>
             </div>
             <div class="navbar-center  lg:flex">
                 <div class="flex justify-center items-center">
