one task remaing

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           
     </nav>
     <div class="flex justify-center backdrop-blur-lg  bg-[rgba(255,255,255,0.8)]  pt-10 pb-5">
-          <button id="btn-donate"  class="btn btn-active  bg-[#B4F461] border-none text-[black] font-bold" >Donate</button>
+          <button id="btn-donate"  class="btn btn-active  bg-[#B4F461] border-none text-[black] font-bold" >Donation</button>
           <button id="btn-history"  class="btn ml-5 btn-active  border border-solid border-[rgba(17, 17, 17, 0.3)] text-[#696868]" >History</button>
           </div>
     </header>
@@ -52,7 +52,7 @@
       <dialog id="my_modal_1" class="modal">
           <div class="modal-box text-center">
               <h3 class="text-3xl font-bold">Congrates!</h3>
-              <img class="text-center mx-auto mt-4" src="../assets/coin.png" alt="">
+              <img class="text-center mx-auto mt-4" src="assets/coin.png" alt="">
               <p class="py-4">You have donated for mankind.</p>
               <p class="text-2xl font-bold">Suceessfully</p>
               <div class="modal-action">
@@ -137,7 +137,7 @@
           <div  class="">
             <div class="w-1/5 flex rounded-lg bg-[#F3F3F3]">
               <img src="./assets/coin.png" alt="">
-            <span class="total-collection-3">0</span>
+            <span id="total-collection-3">0</span>
             <p class="ml-1">BDT</p>
             </div>
           <h3 class="text-2xl font-bold">
@@ -160,9 +160,9 @@
     </div>
 
     <!-- history section -->
-     <div id="content-2" class="hidden w-11/12 mx-auto">
+     <div id="content-2" class="history-contianer flex justify-center  bg-purple-600 w-full h-auto">
       
-      <div id="history-container">
+      <div id="history-container" class="text-black text-xl absolute top-[45%] w-[75%] h-[100px] hidden  text-center">
 
       </div>
      </div>
