responsive check onece again

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <title>Donation Page</title>
     <header class="navbar-sticky    sticky top-0 z-50 ">
       
-      <nav class="   "></nav>
-        <div class=" navbar  backdrop-blur-lg  bg-[rgba(249,247,243,0.8)]">
-            <div class="navbar-start">
+      <nav class="  "></nav>
+        <div class=" navbar flex flex-col justify-center items-center  lg:flex-row  backdrop-blur-lg  bg-[rgba(249,247,243,0.8)]">
+            <div class="navbar-start flex flex-row">
               
-              <a href="blog.html" class="btn flex justify-center items-center lg:pl-6 lg:pr-6 bg-[#B4F461]  font-bold  btn-ghost border-r-8 text-10">Blog</a>
+              <a href="blog.html" class="btn flex  justify-center items-center lg:pl-6 lg:pr-6 bg-[#B4F461]  font-bold  btn-ghost border-r-8 text-10">Blog</a>
             </div>
             <div class="navbar-center  lg:flex">
                 <div class="flex justify-center items-center">
