Donate Bangladesh complete. Alhamdulilah

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class=" navbar flex flex-col justify-center items-center  lg:flex-row  backdrop-blur-lg  bg-[rgba(249,247,243,0.8)]">
             <div class="navbar-start flex flex-row justify-center lg:justify-start">
               
-              <a href="blog.html" class="btn flex  justify-center items-center lg:pl-6   lg:pr-6 bg-[#B4F461]  font-bold  btn-ghost border-r-8 text-10">Blog</a>
+              <a href="blog.html" class="btn flex  justify-center items-center lg:pl-6   lg:pr-6 bg-[#B4F461] text-lg font-bold  btn-ghost border-r-8 text-10">Blog</a>
             </div>
             <div class="navbar-center  lg:flex">
                 <div class="flex justify-center items-center">
@@ -84,8 +84,8 @@
           <div  class="">
             <div class="lg:w-1/5 w-1/4  flex rounded-lg bg-[#F3F3F3]">
               <img class="ml-2" src="./assets/coin.png" alt="">
-            <span id="total-collection-1" class="ml-1">100</span>
-            <p class="ml-1">BDT</p>
+            <span id="total-collection-1" class="pd-1">100</span>
+            <p class="pl-1 pr-3">BDT</p>
             </div>
           <h3 class="text-2xl font-bold">Donate for Flood at Noakhali, Bangladesh</h3>
           <p class="py-2">
@@ -115,7 +115,7 @@
             <div class="w-1/5 flex rounded-lg bg-[#F3F3F3]">
               <img src="./assets/coin.png" alt="">
             <span id="total-collection-2" class="ml-1">0</span>
-            <p class="ml-1">BDT</p>
+            <p class="ml-1 ">BDT</p>
             </div>
           <h3 class="text-2xl font-bold">Donate for Flood Relief in Feni,Bangladesh</h3>
           <p class="py-2">
@@ -141,8 +141,8 @@
           <div  class="">
             <div class="w-1/5 flex rounded-lg bg-[#F3F3F3]">
               <img src="./assets/coin.png" alt="">
-            <span id="total-collection-3">0</span>
-            <p class="ml-1">BDT</p>
+            <span id="total-collection-3" class="ml-1">0</span>
+            <p class="ml-1 pr-5">BDT</p>
             </div>
           <h3 class="text-2xl font-bold">
             Aid for Injured in the Quota Movement
