fixig data theme of blog.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           src="./assets/noakhali.png"
           class=" rounded-lg shadow-xl" />
           <div  class="">
-            <div class="lg:w-1/5 w-1/4  flex rounded-lg bg-[#F3F3F3]">
+            <div class="lg:w-1/5 w-1/4  flex rounded-lg ">
               <img class="ml-2" src="./assets/coin.png" alt="">
             <span id="total-collection-1" class="pd-1">100</span>
             <p class="pl-1 pr-3">BDT</p>
@@ -112,7 +112,7 @@
           src="./assets/feni.png"
           class=" rounded-lg shadow-xl" />
           <div  class="">
-            <div class="w-1/5 flex rounded-lg bg-[#F3F3F3]">
+            <div class="w-1/5 flex rounded-lg ">
               <img src="./assets/coin.png" alt="">
             <span id="total-collection-2" class="ml-1">0</span>
             <p class="ml-1 ">BDT</p>
@@ -139,7 +139,7 @@
           src="assets/quota-protest.png"
           class=" rounded-lg shadow-xl" />
           <div  class="">
-            <div class="w-1/5 flex rounded-lg bg-[#F3F3F3]">
+            <div class="w-1/5 flex rounded-lg ">
               <img src="./assets/coin.png" alt="">
             <span id="total-collection-3" class="ml-1">0</span>
             <p class="ml-1 pr-5">BDT</p>
